# deepsjeng_631_bench

./: .gitignore  CMakeLists.txt
data/input/: simp.txt
include/: bitboard.h  preproc.h  state.h  ttable.h  utils.h
src/: bitboard.cpp  epd.cpp  initp.cpp  main.cpp  pawn.cpp  preproc.cpp  search.cpp  state.cpp  ttable.cpp  utils.cpp
sylvex_ws/: spec.txt
sylvex_ws/no_optimize/: gprof_out.txt
